ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: projet-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: web.datascientest.module-datascientest.cloudns.ph
    http:
      paths:
        - path: /api
          pathType: Prefix
          backend:
             service:
              name: api-helm-svc
              port:
                number: 80
